--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -17,3 +17,5 @@ $color-krank: map-get($mat-amber, 300);
 $color-krank-body: #ff7;
 $color-feiertag: map-get($mat-pink, 300);
 $color-feiertag-body: #fcc;
+
+$cal-size: 1em;
