--- a/src/app/modules/calendar/day/day.component.html
+++ b/src/app/modules/calendar/day/day.component.html
@@ -1,7 +1,6 @@
-<div [class]="['day', 't' + day.type]" *ngIf="day.isValid">
-  <div>{{day.day}}</div>
+<div [class]="dayClass(day)" *ngIf="day.isValid">
+  <div class="number">{{day.day}}</div>
   <div class="info" [innerHTML]="day.info"></div>
-  <div class="overlay"></div>
 </div>
 <div class="empty" *ngIf="!day.isValid">
 </div>
