--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -19,31 +19,45 @@
     <button mat-flat-button (click)="clickPrevWeek()">
       <mat-icon>arrow_left</mat-icon>
     </button>
-    <button mat-flat-button [class]="weekClass(day)" *ngFor="let day of ss.session.year.week" (click)="clickWeekDay(day)">
+    <button mat-flat-button [class]="weekClass(day)" *ngFor="let day of ss.session.year.week"
+            (click)="clickWeekDay(day)">
       {{ss.session.year.weekDayNameShort(day)}} {{day.day}}
     </button>
     <button mat-flat-button (click)="clickNextWeek()">
       <mat-icon>arrow_right</mat-icon>
     </button>
   </div>
+  <div class="ctrls">
+    <button mat-flat-button (click)="clickCalendar()">
+      <mat-icon>today</mat-icon>
+    </button>
+  </div>
 </div>
 <div class="controls">
-  <button mat-flat-button (click)="clickPlayPause($event)">
-    <mat-icon *ngIf="data?.start == null">play_arrow</mat-icon>
-    <mat-icon *ngIf="data?.start != null">pause</mat-icon>
+  <button mat-flat-button (click)="clickPlay($event)">
+    <div>{{playData.text}}</div>
+    <mat-icon>{{playData.icon}}</mat-icon>
   </button>
 
   <button mat-flat-button [disabled]="data==null" (click)="clickStop($event)">
-    <mat-icon>stop</mat-icon>
+    <div i18n>Gehen</div>
+    <mat-icon>home</mat-icon>
   </button>
 </div>
 <div class="times">
-  <mat-card  [class]="timeClass(idx)" *ngFor="let time of ss.session.year.day.times; let idx = index" (click)="toggleTime(idx)">
+  <mat-card [class]="timeClass(idx)" *ngFor="let time of ss.session.year.day.times; let idx = index"
+            (click)="toggleTime(idx)">
     <mat-card-header>
       <mat-card-title>{{time.typeForDisplay}}</mat-card-title>
-      <button *ngIf="idx===dataIdx" mat-icon-button (click)="deleteTime(idx)"><mat-icon>delete</mat-icon></button>
+      <button *ngIf="idx===dataIdx" mat-icon-button (click)="deleteTime($event, idx)">
+        <mat-icon>delete</mat-icon>
+      </button>
       <button *ngIf="idx!==dataIdx" mat-icon-button></button>
     </mat-card-header>
-    {{time.from}} - {{time.to}}
+    <div class="content">
+      <input type="time" [(ngModel)]="time.fromValue" (ngModelChange)="ss.saveSession()">
+      <div i18n>bis</div>
+      <input type="time" [(ngModel)]="time.toValue" (ngModelChange)="ss.saveSession()">
+    </div>
   </mat-card>
 </div>
