--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -28,6 +28,11 @@
       border-color: rgba(0, 0, 0, 0.5);
     }
 
+    .today {
+      color: rgba(255, 255, 255, 0.8);
+      font-weight: bold;
+    }
+
     .tnull {
       background: #a0a0ff;
     }
@@ -46,7 +51,6 @@
   margin-bottom: 5px;
 
   button {
-    background: #a0a0ff;
     padding: 0;
     font-size: 1em;
     border-radius: 1em;
@@ -57,6 +61,10 @@
       height: initial;
       width: initial;
     }
+  }
+
+  button.tnull {
+    background: #a0a0ff;
   }
 
   button:not(:last-child) {
@@ -106,8 +114,11 @@
     margin: 0 !important;
   }
 
-  .active {
+  mat-card.tnull {
     background: #a0a0ff;
   }
 }
 
+mat-card:not(.active) {
+  background: transparent;
+}
