--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,49 +1,31 @@
-<!--
-  <div class="types">
-    <div on-tap="tapNormal" class$="normal {{isType('',rnd)}}">
-      {{getNormal(rnd)}}
-      <paper-icon-button on-tap="tapPrint" hidden$="{{!isType('',rnd)}}" icon="print"></paper-icon-button>
-    </div>
-    <div on-tap="tapTeilzeitFrei" class$="TeilzeitFrei {{isType('TeilzeitFrei',rnd)}}">Teilzeit Frei</div>
-    <div on-tap="tapUrlaub" class$="Urlaub {{isType('Urlaub',rnd)}}">
-      Urlaub
-      <paper-icon-button on-tap="tapPrint" hidden$="{{!isType('Urlaub',rnd)}}" icon="print"></paper-icon-button>
-    </div>
-    <div on-tap="tapUrlaubHalb" class$="UrlaubHalb {{isType('UrlaubHalb',rnd)}}">Urlaub 1/2</div>
-    <div on-tap="tapKrank" class$="Krank {{isType('Krank',rnd)}}">Krank</div>
-    <div on-tap="tapFeiertag" class$="Feiertag {{isType('Feiertag',rnd)}}">Feiertag</div>
+<div class="header">
+  <div class="daytypes">
+    <button mat-flat-button [class]="typeClass(entry.id)" *ngFor="let entry of dayTypeList" (click)="clickDayType(entry.id)">{{entry.label}}</button>
   </div>
--->
+</div>
 <div class="header">
   <div class="week">
-    <button mat-flat-button (click)="clickPrevWeek()">
+    <button mat-flat-button class="weekctrl" (click)="clickPrevWeek()">
       <mat-icon>arrow_left</mat-icon>
     </button>
     <button mat-flat-button [class]="weekClass(day)" *ngFor="let day of ss.session.year.week"
             (click)="clickWeekDay(day)">
-      <ng-container *ngIf="day.times.length > 0">*</ng-container>
+      <ng-container *ngIf="day.times.length > 0">[</ng-container>
       {{ss.session.year.weekDayNameShort(day)}} {{day.day}}
+      <ng-container *ngIf="day.times.length > 0">]</ng-container>
     </button>
-    <button mat-flat-button (click)="clickNextWeek()">
+    <button mat-flat-button class="weekctrl" (click)="clickNextWeek()">
       <mat-icon>arrow_right</mat-icon>
     </button>
   </div>
   <div class="ctrls">
+    <button mat-flat-button (click)="ss.session.year.fillHolidays()">
+      <mat-icon>refresh</mat-icon>
+    </button>
     <button mat-flat-button (click)="clickCalendar()">
       <mat-icon>today</mat-icon>
     </button>
   </div>
-</div>
-<div class="controls">
-  <button mat-flat-button (click)="clickPlay($event)" [class]="weekClass(ss.session.year.day)">
-    <div>{{playData.text}}</div>
-    <mat-icon>{{playData.icon}}</mat-icon>
-  </button>
-
-  <button mat-flat-button [disabled]="data==null" (click)="clickStop($event)">
-    <div i18n>Gehen</div>
-    <mat-icon>home</mat-icon>
-  </button>
 </div>
 <div class="times">
   <mat-card [class]="timeClass(idx)" *ngFor="let time of ss.session.year.day.times; let idx = index"
@@ -61,4 +43,15 @@
       <input type="time" [(ngModel)]="time.toValue" (ngModelChange)="ss.saveSession()">
     </div>
   </mat-card>
+</div>
+<div class="controls">
+  <button mat-flat-button (click)="clickPlay($event)" [class]="weekClass(ss.session.year.day)">
+    {{playData.text}}
+    <mat-icon>{{playData.icon}}</mat-icon>
+  </button>
+
+  <button mat-flat-button [disabled]="data==null" (click)="clickStop($event)">
+    <div i18n>Gehen</div>
+    <mat-icon>home</mat-icon>
+  </button>
 </div>
