--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,17 @@
   justify-content: space-between;
   height: 100vh;
   width: 100vw;
+
+  button[logo] {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+
+    ::ng-deep img {
+      height: 48px;
+    }
+  }
 }
 
 .content {
@@ -24,9 +35,21 @@ mat-toolbar {
     display: flex;
     flex-flow: row;
     align-items: center;
-    img {
-      height: 48px;
-      margin-right: 1em;
+
+    button {
+      padding: 0;
+      background: transparent;
+
+      img {
+        height: 48px;
+        margin-right: 1em;
+      }
+    }
+
+    div {
+      display: flex;
+      flex-flow: column;
+      line-height: 1.1em;
     }
   }
 
@@ -34,5 +57,19 @@ mat-toolbar {
     font-size: 50%;
     color: rgba(0, 0, 0, 0.6);
     line-height: 1em;
+    margin: 0;
   }
+}
+
+.loggedin {
+  color: rgba(0, 128, 0, 0.8);
+}
+
+.loggedout {
+  color: rgba(255, 100, 100, 0.7);
+}
+
+.debug-outer {
+  display: flex;
+  flex-flow: row;
 }
