--- a/src/app/modules/calendar/month/month.component.scss
+++ b/src/app/modules/calendar/month/month.component.scss
@@ -1,15 +1,27 @@
 @import 'node_modules/@angular/material/theming';
 @import 'src/styles/theme';
 
-mat-card {
-  width: calc(7 * 9 * #{$cal-size});
+:host {
+  display: flex;
+  flex-flow: row;
+}
+
+.year {
+  _width: calc(7 * 9 * #{$cal-size});
   height: calc(45 * #{$cal-size});
+}
+
+mat-card {
+  max-width: fit-content;
+  width: fit-content;
   margin: 1em;
 
-  mat-card-header {
+  mat-card-title {
     display: flex;
+    width: 100%;
+    flex-flow: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   mat-card-content {
@@ -25,6 +37,17 @@ mat-card {
         align-items: center;
         justify-content: center;
         width: calc(4 * #{$cal-size});
+      }
+
+      .day {
+        display: flex;
+        flex: 1;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.05);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 0.5em;
+        margin: 1px;
       }
     }
   }
