--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -29,13 +29,16 @@
   .week, .daytypes {
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
 
     .active {
       border-color: rgba(0, 0, 0, 0.5) !important;
+      border-radius: 1em !important;
     }
 
     button {
       display: flex;
+      align-items: center;
     }
 
     button:not(.weekctrl) {
@@ -62,7 +65,6 @@
     }
 
     .today {
-      color: rgba(255, 255, 255, 0.8);
       font-weight: bold;
     }
   }
@@ -108,6 +110,7 @@
 
   mat-card {
     cursor: pointer;
+    margin: 2px;
 
     .mat-card-header .mat-card-title {
       margin-bottom: 0;
