--- a/src/app/modules/calendar/day/day.component.scss
+++ b/src/app/modules/calendar/day/day.component.scss
@@ -102,3 +102,6 @@ $size: calc(8 * #{$cal-size});
   border: 3px solid rgba(0, 0, 0, 0.5) !important;
   border-radius: 1em !important;
 }
+
+.hastimes {
+}
