--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -10,17 +10,6 @@
   padding: 10px;
 }
 
-.calendar {
-  display: flex;
-  flex-flow: row;
-  flex-wrap: wrap;
-
-  .ctrls {
-    display: flex;
-    flex-flow: column;
-  }
-}
-
 .header {
   display: flex;
   flex-flow: row;
@@ -110,53 +99,89 @@
   }
 }
 
-.times {
+.calendarpanel {
   display: flex;
   flex-flow: row;
-  flex-wrap: wrap;
-  flex: 1;
-  width: 100%;
-  max-width: 100%;
+  justify-content: space-between;
   margin-bottom: 5px;
 
-  mat-card {
-    cursor: pointer;
-    margin: 2px;
-    height: max-content;
+  .calendar {
+    display: flex;
+    flex-flow: row;
+    overflow-y: auto;
+    max-height: calc(100vh - 310px);
+  }
 
-    .mat-card-header .mat-card-title {
-      margin-bottom: 0;
-    }
+  .timepanel {
+    display: flex;
+    flex-flow: column;
+    flex: 1;
+    max-height: calc(100vh - 310px);
 
-    mat-card-header {
+    .title {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      height: 48px;
+      justify-content: center;
+      border-bottom: 1px solid #ccc;
+      font-size: 2em;
+      padding: 0.4em;
     }
 
-    .content {
+    .times {
       display: flex;
       flex-flow: row;
-      align-items: center;
+      flex-wrap: wrap;
+      flex: 1;
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 5px;
+      overflow-y: auto;
 
-      div {
-        padding: 0.5em;
+      mat-card {
+        cursor: pointer;
+        margin: 2px;
+        height: max-content;
+
+        .mat-card-header .mat-card-title {
+          margin-bottom: 0;
+        }
+
+        mat-card-header {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          height: 48px;
+        }
+
+        .content {
+          display: flex;
+          flex-flow: row;
+          align-items: center;
+
+          div {
+            padding: 0.5em;
+          }
+
+          input {
+            background: transparent;
+            border: none;
+          }
+        }
       }
 
-      input {
-        background: transparent;
-        border: none;
+      ::ng-deep .mat-card-header-text {
+        margin: 0 !important;
+      }
+
+      mat-card.active.tnull {
+        background: #a0a0ff;
       }
     }
   }
 
-  ::ng-deep .mat-card-header-text {
-    margin: 0 !important;
-  }
-
-  mat-card.active.tnull {
-    background: #a0a0ff;
+  .ctrls {
+    display: flex;
+    flex-flow: column;
   }
 }
 
