--- a/src/app/modules/calendar/dashboard/dashboard.component.scss
+++ b/src/app/modules/calendar/dashboard/dashboard.component.scss
@@ -1,5 +1,5 @@
-@import 'node_modules/@angular/material/theming';
-@import 'src/styles/theme';
+@import '../../../../../node_modules/@angular/material/theming';
+@import '../../../../styles/theme';
 
 :host {
   display: flex;
@@ -125,6 +125,7 @@
       border-bottom: 1px solid #ccc;
       font-size: 2em;
       padding: 0.4em;
+      line-height: 1em;
     }
 
     .times {
