--- a/src/app/modules/calendar/dashboard/dashboard.component.scss
+++ b/src/app/modules/calendar/dashboard/dashboard.component.scss
@@ -102,6 +102,7 @@
 .calendarpanel {
   display: flex;
   flex-flow: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 5px;
 
@@ -166,6 +167,16 @@
           input {
             background: transparent;
             border: none;
+          }
+        }
+
+        .project {
+          display: flex;
+          flex-flow: row;
+          align-items: flex-start;
+          div:first-child {
+            font-weight: bold;
+            font-style: italic;
           }
         }
       }
