--- a/src/app/visuals/components/checkbox/checkbox.component.html
+++ b/src/app/visuals/components/checkbox/checkbox.component.html
@@ -1,6 +1,9 @@
 <ng-template #cpuInput>
   <mat-checkbox [formControl]="formGroup.controls[formName]"
-                [labelPosition]="labelPosition">
+                [labelPosition]="labelPosition"
+                [disableRipple]="true"
+                (focusout)="onBlur()"
+                (focusin)="onFocus()">
     {{formData.label}}
     <app-error [formName]="formName" [formGroup]="formGroup"></app-error>
   </mat-checkbox>
