--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -10,12 +10,16 @@ $color-ci-grey: #999a9c;
 $color-ci-blue: #002f62;
 $color-ci-default: #333;
 $color-table-label: rgba(0, 0, 0, 0.54);
+$color-input-label: rgba(0,0,0,.6);
+$color-text-focused: #673ab7; /* deeppurple-amber theme */
+$color-text-invalid: rgb(244, 67, 54);
 $color-bg-input: #eee;
 $color-bg-app: #f5f5f5;
 $color-bg-dialog-input: #fafafa;
 $color-bg-button: rgba(0,0,0,0.1);
 $color-bg-table: #fff;
 $color-border-input: #dfdfdf;
+$color-border-select-focus: $color-text-focused;
 $color-border-button: rgba(0,0,0,.5);
 $color-button-disabled: rgba(0,0,0,.5);
 $color-button-enabled: rgba(0,0,0,.87);
@@ -120,6 +124,39 @@ app-select-group {
 }
 
 
+.cpu-frame-top,
+.cpu-frame-right,
+.cpu-frame-left,
+.cpu-frame-bottom {
+  border-color: transparent;
+  background-color: transparent !important;
+}
+
+.cpu-frame-top.cpu-focus,
+.cpu-frame-top.cpu-focus.cpu-invalid,
+.cpu-frame-top.cpu-invalid {
+  border-bottom-color: transparent !important;
+}
+
+.cpu-frame-bottom.cpu-focus,
+.cpu-frame-bottom.cpu-focus.cpu-invalid,
+.cpu-frame-bottom.cpu-invalid {
+  border-top-color: transparent !important;
+}
+
+.cpu-frame-right.cpu-focus,
+.cpu-frame-right.cpu-focus.cpu-invalid,
+.cpu-frame-right.cpu-invalid {
+  border-left-color: transparent !important;
+}
+
+.cpu-frame-left.cpu-focus,
+.cpu-frame-left.cpu-focus.cpu-invalid,
+.cpu-frame-left.cpu-invalid {
+  border-right-color: transparent !important;
+}
+
+
 app-login .Button-Area button {
   background-color: $color-bg-button !important;
   border-color: $color-border-button; /*rgba(0,0,0,0.25);  */
@@ -134,6 +171,52 @@ app-login .Button-Area button[disabled="true"] {
 .dialog-content {
   background-color: $color-bg-dialog-input;
 }
+
+app-base {
+  .mat-placeholder-required.mat-form-field-required-marker.ng-star-inserted {
+    color: $color-input-label;
+  }
+
+  .mat-focused {
+    color: $color-text-focused;
+  }
+}
+
+app-select {
+
+  .cpu-select-invalid-focus {
+
+    .mat-form-field-outline-start,
+    .mat-form-field-outline-gap,
+    .mat-form-field-outline-end {
+      border-color: $color-border-select-focus;
+    }
+  }
+}
+
+app-checkbox{
+  .cpu-focus {
+    border-color: $color-border-select-focus;
+  }
+}
+
+app-radio-group,
+app-select-group {
+  .cpu-focus,
+  .cpu-invalid.cpu-focus {
+    border-color:  $color-border-select-focus !important;
+  }
+
+  .cpu-invalid {
+    border-color: currentcolor !important;
+    color: $color-text-invalid ;
+  }
+
+  .cpu-invalid :not(mat-pseudo-checkbox) {
+    color: inherit !important;
+  }
+}
+
 
 
 .app-table {
