--- a/src/app/modules/calendar/dashboard/dashboard.component.scss
+++ b/src/app/modules/calendar/dashboard/dashboard.component.scss
@@ -171,12 +171,26 @@
         }
 
         .project {
-          display: flex;
-          flex-flow: row;
-          align-items: flex-start;
-          div:first-child {
+          margin-top: 0.7em;
+          td {
+            font-size: 0.75em;
+            padding-left: 0.2em;
+            padding-right: 0.2em;
+            vertical-align: middle;
+
+            button {
+              width: 32px;
+              height: 32px;
+              mat-icon {
+                font-size: 16px;
+                line-height: 16px;
+              }
+            }
+          }
+          td:first-child {
+            white-space: nowrap;
             font-weight: bold;
-            font-style: italic;
+            padding-left: 0;
           }
         }
       }
