--- a/src/app/visuals/components/slider/slider.component.html
+++ b/src/app/visuals/components/slider/slider.component.html
@@ -1,11 +1,16 @@
 <ng-template #cpuInput>
-  <mat-slider
-    [displayWith]="display"
-    [min]="min"
-    [max]="max"
-    [thumbLabel]="true"
-    [formControl]="formGroup.controls[formName]"
-  ></mat-slider>{{display(formGroup.controls[formName].value)}}
+  <div class="slider">
+    <div class="label">{{formData.label}} {{display}} Std.</div>
+    <mat-slider
+      color="primary"
+      [min]="min"
+      [max]="max"
+      [tickInterval]="2"
+      [step]="5"
+      (input)="onSliderMove($event)"
+      [formControl]="formGroup.controls[formName]"
+    ></mat-slider>
+  </div>
 </ng-template>
 
-<app-base [componentsTemplate]="cpuInput" [childContext]="ctx" ></app-base>
+<app-base [componentsTemplate]="cpuInput" [childContext]="ctx"></app-base>
