--- a/src/app/modules/calendar/dashboard/dashboard.component.scss
+++ b/src/app/modules/calendar/dashboard/dashboard.component.scss
@@ -170,8 +170,37 @@
           }
         }
 
+        .projhead {
+          display: flex;
+          flex-flow: row;
+          align-items: center;
+
+          .line1 {
+            width: 10%;
+          }
+
+          .line2 {
+            width: 90%;
+          }
+
+          .line1, .line2 {
+            height: 1px;
+            background: rgba(0, 0, 0, 0.3);
+          }
+
+          .text {
+            position: relative;
+            top: 0;
+            font-size: 0.7em;
+            color: rgba(0, 0, 0, 0.5);
+            width: fit-content;
+            padding: 0 0.5em;
+          }
+        }
+
         .project {
           margin-top: 0.7em;
+
           td {
             font-size: 0.75em;
             padding-left: 0.2em;
@@ -181,12 +210,14 @@
             button {
               width: 32px;
               height: 32px;
+
               mat-icon {
                 font-size: 16px;
                 line-height: 16px;
               }
             }
           }
+
           td:first-child {
             white-space: nowrap;
             font-weight: bold;
